--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
 
     <div class="description">
       Ipod Arduino remote based on David Finlay's code.
+See http://nuxx.net/wiki/Apple_Accessory_Protocol and https://gist.github.com/322448 for more info.
     </div>
 
     <h2>Contact</h2>
-<p> (konkretmusik@gmail.com)<br/>      </p>
+<p> (konkretmusik@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
